dark mode fixes on physicians and services and service

--- a/cpai/src/Component/Services/index.css
+++ b/cpai/src/Component/Services/index.css
@@ -48,11 +48,11 @@
 .service-section li h3 {
   margin-top: 10px;
   font-size: 1.2em;
-  color: #333;
+  /* color: #333; */
 }
 
 .service-section li p {
-  color: #666; /* Set the color of the description */
+  /* color: #666; Set the color of the description */
 }
 
 @media (max-width: 1200px) {
